Creado mediante Colaboratory

--- a/Arreglos.ipynb
+++ b/Arreglos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtC2TR6XJ8cOYxzkWJXL8x",
+      "authorship_tag": "ABX9TyM0aGvf3+0g14AntX4gZPxy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -267,6 +267,40 @@
       ],
       "metadata": {
         "id": "CJSkscuhePj2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Implementando Listas de python, haga un programa que cree una matriz :)\n",
+        "\n",
+        "# Numero de filas y columnas :v\n",
+        "filas = int(input(\"Ingrese el número de filas: \"))\n",
+        "columnas = int(input(\"Ingrese el número de columnas: \"))\n",
+        "\n",
+        "# Lista vacia para almacenar la matriz (._. )\n",
+        "matriz = []\n",
+        "\n",
+        "# Se ingresa los valores a la matriz\n",
+        "for i in range(filas):\n",
+        "    # Lista vacía para cada fila\n",
+        "    fila = []\n",
+        "    for j in range(columnas):\n",
+        "        # Agregar elementos a la fila\n",
+        "        elemento = int(input(f\"Ingrese el elemento para la posición [{i}][{j}]: \"))\n",
+        "        fila.append(elemento)\n",
+        "    # Agregar la fila completa a la matriz\n",
+        "    matriz.append(fila)\n",
+        "\n",
+        "# Imprimir la matriz\n",
+        "for fila in matriz:\n",
+        "    print(fila)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RishG2e_lfY1"
       },
       "execution_count": null,
       "outputs": []
